--- a/.github/workflows/pandoc-builds.yaml
+++ b/.github/workflows/pandoc-builds.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Install pandoc
         run: make install-pandoc
       - name: Create PDFs
-        run: make samenvatting.pdf
+        run: make samenvatting
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
