--- a/.github/workflows/pandoc-builds.yaml
+++ b/.github/workflows/pandoc-builds.yaml
@@ -10,8 +10,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Install pandoc
         run: make install-pandoc
-      - name: Create PDFs
+      - name: Create PDF
         run: make samenvatting
+      - name: Test existence
+        run: file build/samenvatting.pdf
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
