using docker://pandoc/latex

--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -4,6 +4,7 @@ on: push
 
 jobs:
   marp:
+    runs-on: ubuntu-latest
     - name: Checkout 
       uses: actions/checkout@v2 # Required to mount the Github Workspace to a volume 
     - uses: addnab/docker-run-action@v3
