--- a/.github/workflows/pandoc-builds.yaml
+++ b/.github/workflows/pandoc-builds.yaml
@@ -4,17 +4,17 @@ on: push
 
 jobs:
   pandoc:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Install pandoc
-        run: make install-pandoc
-      - name: Create PDF
-        run: make samenvatting begrippen
-      - name: Test existence
-        run: file build/samenvatting.pdf
-      - name: Release
+      - uses: docker://pandoc/latex:2.9
+        with:
+          args: --output=build/samenvatting.pdf samenvatting.md
+      - uses: docker://pandoc/latex:2.9
+        with:
+          args: --output=build/begrippen.pdf begrippen.md
+      - name: Release pandoc generated pdfs
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
