--- a/.github/workflows/pandoc-builds.yaml
+++ b/.github/workflows/pandoc-builds.yaml
@@ -6,11 +6,13 @@ jobs:
   pandoc:
     runs-on: ubuntu-22.04
     steps:
+      - name: Create build directory
+        run: mkdir build
       - name: Checkout
         uses: actions/checkout@v3
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --output=build/samenvatting.pdf samenvatting.md
+          args: samenvatting.md -o build/samenvatting.pdf
       - uses: docker://pandoc/latex:2.9
         with:
           args: --output=build/begrippen.pdf begrippen.md
