--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -7,11 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 
-        uses: actions/checkout@v2 # Required to mount the Github Workspace to a volume 
-      - uses: addnab/docker-run-action@v3
+        uses: actions/checkout@v3 # Required to mount the Github Workspace to a volume 
+      - name: Prepare
+        run: make prepare
+      - uses: docker://marp/marp-cli
         with:
-          registry: hub.docker.com
-          image: marp/marp-cli
-          options: -v ${{ github.workspace }}:/home/marp/app/ -e LANG=nl_NL.UTF-8
-          run: |
-            marp-cli --allow-local-files presentatie.md --pdf -o build/presentatie.pdf
+          args: --allow-local-files presentatie.md --pdf -o build/presentatie.pdf
