--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 
-        uses: actions/checkout@v3 # Required to mount the Github Workspace to a volume 
+        uses: actions/checkout@v3
       - name: Prepare
         run: make prepare
       - uses: docker://marp/marp-cli
