--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -10,6 +10,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Prepare
         run: make prepare
+      - name: Open build directory
+        run: | 
+            chmod -v +w build
+            ls -ld build
       - uses: docker://marpteam/marp-cli
         with:
           user: 1001:115
