--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -12,11 +12,10 @@ jobs:
         run: make prepare
       - name: Open build directory
         run: | 
-            chmod -v og+w build
+            chmod -v o+w build
             ls -ld build
       - uses: docker://marpteam/marp-cli
         with:
-          user: 1001:115
           args: --allow-local-files presentatie.md --pdf -o build/presentatie.pdf
       - name: Release marp generated pdfs
         uses: softprops/action-gh-release@v1
