--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -12,11 +12,13 @@ jobs:
         run: make prepare
       - name: Open build directory
         run: | 
-            chmod -v o+w build
+            echo UID: ${{ github.uid }} GID: ${{ github.gid }}
+            # chmod -v o+w build
             ls -ld build
-      - uses: docker://marpteam/marp-cli
+      - uses: docker://marpteam/marp-cli:v3.1.0
         with:
           args: --allow-local-files presentatie.md --pdf -o build/presentatie.pdf
+          env: LANG=nl_NL.UTF-8 MARP_USER=1001:115
       - name: Release marp generated pdfs
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
