--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -12,8 +12,8 @@ jobs:
         run: make prepare
       - name: Open build directory
         run: | 
-            echo UID: ${{ github.uid }} GID: ${{ github.gid }}
-            # chmod -v o+w build
+            # echo UID: ${{ github.uid }} GID: ${{ github.gid }}
+            chmod -v o+w build
             ls -ld build
       - uses: docker://marpteam/marp-cli:v3.1.0
         with:
