--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -12,13 +12,15 @@ jobs:
         run: make prepare
       - uses: docker://marpteam/marp-cli:v3.1.0
         with:
-          args: --allow-local-files presentatie.md --pdf -o build/presentatie.pdf
+          args: --allow-local-files presentatie.md -o build/presentatie/presentatie.html
         env: 
           LANG: "nl_NL.UTF-8"
           MARP_USER: "1001:115"
+      - name: Copy images
+        run: cp -r img build/presentatie
       - name: Release marp generated pdfs
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            build/presentatie.pdf
+            build/presentatie
