--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -1,12 +1,7 @@
 name: Marp build
 
-on:
-  push:
-    branches:
-      - main
-    tags:
-      - 'v*.*.*'
-    
+on: push
+
 jobs:
   marp:
     runs-on: ubuntu-latest
@@ -25,6 +20,7 @@ jobs:
         run: cp -r img build/presentatie
       - name: Deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build/presentatie
