--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -19,9 +19,7 @@ jobs:
       - name: Copy images
         run: cp -r img build/presentatie
       - name: Zip the offline presentatie
-        run: |
-           | cd build
-           | zip presentatie.zip presentatie 
+        run: cd build && zip presentatie.zip presentatie 
       - name: Deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
         if: startsWith(github.ref, 'refs/tags/')
