--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -2,6 +2,10 @@ name: Marp build
 
 on: push
 
+env:
+  BUILD_DIR: build
+  PRESENTATIE_DIR: $BUILD_DIR/presentatie
+
 jobs:
   marp:
     runs-on: ubuntu-latest
@@ -12,31 +16,31 @@ jobs:
         run: make prepare
       - uses: docker://marpteam/marp-cli:v3.1.0
         with:
-          args: --allow-local-files presentatie.md -o build/presentatie/index.html
+          args: --allow-local-files presentatie.md -o $PRESENTATIE_DIR/index.html
         env: 
           LANG: "nl_NL.UTF-8"
           MARP_USER: "1001:115"
       - name: Copy images
-        run: cp -r img build/presentatie
+        run: cp -r img $PRESENTATIE_DIR
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --standalone --from markdown samenvatting.md --to html --output=build/presentatie/samenvatting.html
+          args: --standalone --from markdown samenvatting.md --to html --output=$PRESENTATIE_DIR/samenvatting.html
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --standalone --from markdown begrippen.md --to html --output=build/presentatie/begrippen.html
+          args: --standalone --from markdown begrippen.md --to html --output=$PRESENTATIE_DIR/begrippen.html
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --standalone --from markdown oefeningen.md --to html --output=build/presentatie/oefeningen.html
+          args: --standalone --from markdown oefeningen.md --to html --output=$PRESENTATIE_DIR/oefeningen.html
       - name: Zip the offline presentatie
-        run: cd build && zip -r presentatie.zip presentatie 
+        run: cd build && zip -rq presentatie.zip presentatie 
       - name: Deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
         if: startsWith(github.ref, 'refs/tags/')
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/presentatie
+          publish_dir: ./$PRESENTATIE_DIR
       - name: Release presentatie.zip
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: build/presentatie.zip
+          files: $PRESENTATIE_DIR.zip
