--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -4,7 +4,7 @@ on: push
 
 env:
   BUILD_DIR: build
-  PRESENTATIE_DIR: ${{ env.$BUILD_DIR }}/presentatie
+  PRESENTATIE_DIR: build/presentatie
 
 jobs:
   marp:
@@ -32,7 +32,7 @@ jobs:
         with:
           args: --standalone --from markdown oefeningen.md --to html --output=$PRESENTATIE_DIR/oefeningen.html
       - name: Zip the offline presentatie
-        run: cd build && zip -rq presentatie.zip presentatie 
+        run: cd $BUILD_DIR && zip -rq presentatie.zip presentatie 
       - name: Deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
         if: startsWith(github.ref, 'refs/tags/')
