--- a/.github/workflows/marp-build.yaml
+++ b/.github/workflows/marp-build.yaml
@@ -43,4 +43,4 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: $PRESENTATIE_DIR.zip
+          files: ${{ env.BUILD_DIR }}/presentatie.zip
