--- a/.github/workflows/presentatie.yaml
+++ b/.github/workflows/presentatie.yaml
@@ -18,10 +18,10 @@ jobs:
         run: make prepare
       - uses: docker://marpteam/marp-cli:v3.1.0
         with:
-          args: --allow-local-files presentatie/wat-is-linux.md -o ${{ env.PRESENTATIE_DIR }}/wat-is-linux.html
+          args: --allow-local-files presentatie/inleiding.md -o ${{ env.PRESENTATIE_DIR }}/inleiding.html
       - uses: docker://marpteam/marp-cli:v3.1.0
         with:
-          args: --allow-local-files presentatie/waarom-debian.md -o ${{ env.PRESENTATIE_DIR }}/waarom-debian.html
+          args: --allow-local-files presentatie/verder-studeren.md -o ${{ env.PRESENTATIE_DIR }}/verder-studeren.html
       - uses: docker://marpteam/marp-cli:v3.1.0
         with:
           args: --allow-local-files presentatie/rondleiding-gnome.md -o ${{ env.PRESENTATIE_DIR }}/rondleiding-gnome.html
