--- a/.github/workflows/presentatie.yaml
+++ b/.github/workflows/presentatie.yaml
@@ -47,16 +47,16 @@ jobs:
         run: cp -r img ${{ env.PRESENTATIE_DIR }}
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --standalone --from markdown samenvatting.md --to html --output=${{ env.PRESENTATIE_DIR }}/samenvatting.html
+          args: --standalone --css=css/custom.css --from markdown samenvatting.md --to html --output=${{ env.PRESENTATIE_DIR }}/samenvatting.html
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --standalone --from markdown begrippen.md --to html --output=${{ env.PRESENTATIE_DIR }}/begrippen.html
+          args: --standalone --css=css/custom.css --from markdown begrippen.md --to html --output=${{ env.PRESENTATIE_DIR }}/begrippen.html
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --standalone --from markdown oefeningen.md --to html --output=${{ env.PRESENTATIE_DIR }}/oefeningen.html
+          args: --standalone --css=css/custom.css --from markdown oefeningen.md --to html --output=${{ env.PRESENTATIE_DIR }}/oefeningen.html
       - uses: docker://pandoc/latex:2.9
         with:
-          args: --standalone --from markdown verder-leren.md --to html --output=${{ env.PRESENTATIE_DIR }}/verder-leren.html
+          args: --standalone --css=css/custom.css --from markdown verder-leren.md --to html --output=${{ env.PRESENTATIE_DIR }}/verder-leren.html
       - name: Zip the offline presentatie
         run: cd $BUILD_DIR && zip -rq presentatie.zip presentatie 
       - name: Deploy to github pages
