--- a/.github/workflows/presentatie.yaml
+++ b/.github/workflows/presentatie.yaml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Prepare
         run: make prepare
+      - uses: docker://nshine/dot
+        with:
+          args: dot diagram/gnome-states.dot > ${{ env.PRESENTATIE_DIR }}/img/gnome-states.png
       - uses: docker://marpteam/marp-cli:v3.1.0
         with:
           args: --allow-local-files presentatie/inleiding.md -o ${{ env.PRESENTATIE_DIR }}/inleiding.html
