--- a/.github/workflows/presentatie.yaml
+++ b/.github/workflows/presentatie.yaml
@@ -16,6 +16,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Prepare
         run: make prepare
+      - name: loosen permissions
+        run: chmod g+wx,o+wx build/presentatie/img
+      - name: loosen permissions
+        run: chmod g+wx,o+wx build/presentatie/
+      - name: loosen permissions
+        run: chmod g+wx,o+wx build/
       - uses: docker://nshine/dot
         with:
           args: dot diagram/gnome-states.dot -o ${{ env.PRESENTATIE_DIR }}/img/gnome-states.png
