--- a/.github/workflows/presentatie.yaml
+++ b/.github/workflows/presentatie.yaml
@@ -24,7 +24,7 @@ jobs:
         run: chmod g+wx,o+wx build/
       - uses: docker://nshine/dot
         with:
-          args: dot diagram/gnome-states.dot -o ${{ env.PRESENTATIE_DIR }}/img/gnome-states.png
+          args: dot -T png -o ${{ env.PRESENTATIE_DIR }}/img/gnome-states.png diagram/gnome-states.gv 
       - uses: docker://marpteam/marp-cli:v3.1.0
         with:
           args: --allow-local-files presentatie/inleiding.md -o ${{ env.PRESENTATIE_DIR }}/inleiding.html
