ga: test locale stuff

--- a/.github/workflows/presentatie.yaml
+++ b/.github/workflows/presentatie.yaml
@@ -12,6 +12,14 @@ jobs:
   marp:
     runs-on: ubuntu-latest
     steps:
+      - name: Locales
+        run: locale
+      - name: Locale status
+        run: localectl status
+      - name: All locales
+        run: locale -a
+      - name: Generate dutch
+        run: locale-gen nl_NL.UTF-8
       - name: Date format test
         run: echo $(LANG=nl_NL.UTF-8 date +'%A %-d %B %Y')
       - name: Checkout 
