opzet sneltoetsen en begrippen per onderdeel

--- a/.github/workflows/prints.yaml
+++ b/.github/workflows/prints.yaml
@@ -17,5 +17,7 @@ jobs:
           files: |
             build/samenvatting.pdf
             build/begrippen.pdf
+            build/begrippen-per-onderdeel.pdf
             build/oefeningen.pdf
+            build/sneltoetsen-per-onderdeel.pdf
             build/verder-leren.pdf
