nieuwe build stuctuur voor preprocessing

--- a/.github/workflows/presentatie.yaml
+++ b/.github/workflows/presentatie.yaml
@@ -4,7 +4,7 @@ on: push
 
 env:
   BUILD_DIR: build
-  PRESENTATIE_DIR: build/presentatie
+  WEBSITE_DIR: build/website
   LANG: "nl_NL.UTF-8"
   MARP_USER: "1001:115"
 
@@ -18,20 +18,18 @@ jobs:
         uses: actions/checkout@v3
       - name: Prepare
         run: make prepare
-      # - name: loosen permissions
-      #   run: chmod g+wx,o+wx build/presentatie/img
       - name: Diagram
         run: make diagram
-      - name: Run makefile target presentatie
-        run: make presentatie
+      - name: Run makefile target website
+        run: make website
       - name: Deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
         if: startsWith(github.ref, 'refs/tags/')
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./${{ env.PRESENTATIE_DIR }}
-      - name: Release presentatie.zip
+          publish_dir: ./${{ env.WEBSITE_DIR }}
+      - name: Release website.zip
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ${{ env.BUILD_DIR }}/presentatie.zip
+          files: ${{ env.BUILD_DIR }}/website.zip
