--- a/.github/workflows/prints.yaml
+++ b/.github/workflows/prints.yaml
@@ -2,6 +2,10 @@ name: Prints
 
 on: push
 
+env:
+  BUILD_DIR: build
+  PRINT_DIR: ${{ env.BUILD_DIR }}/print
+  
 jobs:
   pandoc:
     runs-on: ubuntu-22.04
@@ -15,10 +19,11 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            build/hoe-de-cursus-te-volgen.pdf
-            build/samenvatting.pdf
-            build/begrippen.pdf
-            build/begrippen-per-onderdeel.pdf
-            build/oefeningen.pdf
-            build/sneltoetsen-per-onderdeel.pdf
-            build/verder-leren.pdf
+            ${{ env.PRINT_DIR }}/hoe-de-cursus-te-volgen.pdf
+            ${{ env.PRINT_DIR }}/samenvatting.pdf
+            ${{ env.PRINT_DIR }}/begrippen.pdf
+            ${{ env.PRINT_DIR }}/begrippen-per-onderdeel.pdf
+            ${{ env.PRINT_DIR }}/oefeningen.pdf
+            ${{ env.PRINT_DIR }}/sneltoetsen-per-onderdeel.pdf
+            ${{ env.PRINT_DIR }}/verder-leren.pdf
+            ${{ env.BUILD_DIR }}/prepare-education-box.sh
